<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/clicker_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clicker_stats_made_crepes"
            android:text="@string/clicker_total_made_crepes"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clicker_stats_hand_made_crepes"
            android:text="@string/clicker_total_hand_made_crepes"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clicker_stats_time_played"
            android:text="@string/clicker_time_played"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clicker_stats_golden_clicked"
            android:text="@string/clicker_golden_clicked"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/clicker_flavors_stats"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/clicker_stats_flavors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/clicker_upgrade_background"
            android:padding="20dp"
            android:orientation="vertical">

            <!-- added programmatically -->

        </LinearLayout>

        <TextView
            android:text="@string/clicker_upgrades_bought"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/clicker_stats_upgrades_bought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/clicker_upgrade_background"
            android:padding="20dp"
            android:orientation="vertical">

            <!-- added programmatically -->

        </LinearLayout>
    </LinearLayout>
</ScrollView>
